<resources>
    <string name="app_name">MemberData</string>
    <string name="image_view">Image View</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="data_member">Data Member</string>
    <string name="view_detail">View detail</string>
    <string name="_060600">060600</string>
    <string name="mark_lee">Mark Lee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">Id</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="logout">Logout</string>
    <string name="admin">Admin</string>
    <string name="kode">Kode</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="id_kota">ID Kota</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="ketik_alamat">ketik alamat</string>
    <string name="ketik_id_kota">ketik ID Kota</string>
    <string name="ketik_nama">ketik nama</string>
    <string name="ketik_kode">ketik kode</string>
    <string name="ketik_id">ketik id</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="ketik_tempat_lahir">ketik tempat lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="ketik_tanggal_lahir">ketik tanggal lahir</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="ketik_tanggal_bergabung">ketik tanggal bergabung</string>
    <string name="choose_file">choose file</string>
    <string name="foto">Foto</string>
    <string name="pilih_dokumen">pilih Dokumen</string>
    <string name="ketik_no_id_dokumen">ketik no ID Dokumen</string>
    <string name="foto_dokumen">Foto Dokumen</string>
    <string name="id_sponsor">ID Sponsor</string>
    <string name="id_level">ID Level</string>
    <string name="ketik_id_level">ketik ID Level</string>
    <string name="id_gudang">ID Gudang</string>
    <string name="ketik_id_paket_pendaftaran">ketik ID Paket Pendaftaran</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="pilih_metode_pembayaran">pilih metode pembayaran</string>
    <string name="bukti_pembayaran">Bukti Pembayaran</string>
    <string name="nilai_cr">Nilai CR</string>
    <string name="ketik_nilai_cr">ketik nilai cr</string>
    <string name="nilai_cashback">Nilai Cashback</string>
    <string name="status">Status</string>
    <string name="pilih_status">pilih status</string>
    <string name="no_telp">No Telp</string>
    <string name="ketik_no_telp">ketik No telp</string>
    <string name="email">Email</string>
    <string name="ketik_email">ketik email</string>
    <string name="ketik_password">ketik password</string>
    <string name="id_jabatan">ID Jabatan</string>
    <string name="ketik_id_jabatan">ketik id jabatan</string>
    <string name="punya_alat">Punya Alat</string>
    <string name="pilih_jabatan">pilih jabatan</string>
    <string name="pilih">pilih</string>
    <string name="punya_npwp">Punya NPWP</string>
    <string name="ketik_npwp">ketik npwp</string>
    <string name="id_bank">ID Bank</string>
    <string name="ketik_id_bank">ketik id bank</string>
    <string name="no_bank">No Bank</string>
    <string name="ketik_no_bank">ketik no bank</string>
    <string name="no_rekening_bank">No Rekening Bank</string>
    <string name="ketik_no_rekening_bank">ketik no rekening bank</string>
    <string name="kartu">Kartu</string>
    <string name="ketik_biografi">ketik biografi</string>
    <string name="vvip_status">VVIP Status</string>
    <string name="check_cha">Check CHA</string>
    <string name="pilih_vvip_status">pilih vvip status</string>
    <string name="jatah_upload">Jatah Upload</string>
    <string name="ketik_jatah_upload">ketik jatah upload</string>
    <string name="active">Active</string>
    <string name="ketik">ketik</string>
    <string name="user_create">User Create</string>
    <string name="ketik_user_create">ketik user create</string>
    <string name="time_create">Time Create</string>
    <string name="ketik_time_create">ketik time create</string>
    <string name="userupdate">User Update</string>
    <string name="ketik_user_update">ketik user update</string>
    <string name="time_update">Time Update</string>
    <string name="ketik_time_update">ketik time update</string>
    <string name="submit">Submit</string>
    <string name="trashbin">trashbin</string>
    <string name="edit_data">Edit Data</string>
    <string name="id_member_060600">Id Member: 060600</string>
    <string name="kode_member_0002">Kode Member: 0002</string>
    <string name="nama_mark_lee">Nama: Mark lee</string>
    <string name="alamat_seoul">Alamat: Seoul</string>
    <string name="id_kota_104362">ID Kota: 104362</string>
    <string name="punya_alat_punya">Punya Alat: Punya</string>
    <string name="id_jabatan_22">Id Jabatan: 22</string>
    <string name="password_fullsunloaf">Password: fullsunloaf</string>
    <string name="email_marklovesfullsun_gmail_com">Email: Marklovesfullsun@gmail.com</string>
    <string name="no_telp_0825651245326">No Telp: 0825651245326</string>
    <string name="status_rich_guy">Status: Rich Guy</string>
    <string name="punya_npwp_punya">Punya NPWP: Punya</string>
    <string name="id_bank_64753287822">ID Bank: 64753287822</string>
    <string name="nama_bank_bsi">Nama Bank: Bsi</string>
    <string name="nomor_rekening_bank_37473254625462">Nomor Rekening Bank: 37473254625462</string>
    <string name="kartu_member_markmember_jpg">Kartu Member: Markmember.jpg</string>
    <string name="biografi_a_man_who_fall_in_love_with_his_job">Biografi: A man who fall in love with his job</string>
    <string name="vvip_status_1">VVIP Status: 1</string>
    <string name="check_cha_2435">Check CHA: 2435</string>
    <string name="jatah_upload_37221">Jatah Upload: 37221</string>
    <string name="active_active">Active: Active</string>
    <string name="user_create_17_09_2022">User Create: 17,09,2022</string>
    <string name="time_create_17_09_2022">Time Create: 17,09,2022</string>
    <string name="time_updat_e_19_09_2022">Time Updat e: 19,09,2022</string>
    <string name="user_update_19_09_2022">User Update: 19,09,2022</string>
    <string name="nilai_cashback_4779">Nilai Cashback: 4779</string>
    <string name="tempat_lahir_canada">Tempat Lahir: Canada</string>
    <string name="tanggal_lahir_02_08_1999">Tanggal Lahir: 02,08,1999</string>
    <string name="jenis_kelamin_laki_laki">Jenis Kelamin: Laki-laki</string>
    <string name="tanggal_bergabung_28_05_2022">Tanggal Bergabung: 28,05,2022</string>
    <string name="foto_mark_jpg">Foto: Mark.jpg</string>
    <string name="id_sponsor_25467254">ID Sponsor: 25467254</string>
    <string name="id_level_25464">ID Level: 25464</string>
    <string name="id_gudang_7">ID Gudang: 7</string>
    <string name="id_paket_pendaftaraan_99">ID Paket Pendaftaraan: 99</string>
    <string name="paket_pendaftaraan_paket_myy">Paket Pendaftaraan: Paket myy</string>
    <string name="harga_paket_pendaftaraan_rp_1_000_000">Harga Paket Pendaftaraan: Rp.1,000,000</string>
    <string name="metode_pembayaran_qris">Metode Pembayaran: Qris</string>
    <string name="bukti_pembayaran_bear_jpg">Bukti Pembayaran: Bear.jpg</string>
    <string name="nilai_cr_3847">Nilai Cr: 3847</string>
    <string name="no_id_dokumen">No ID Dokumen</string>
    <string name="ketik_id_sponsor">ketik ID Sponsor</string>
    <string name="ketik_id_gudang">ketik ID Gudang</string>
    <string name="id_paket_pendaftaran">ID Paket Pendaftaran</string>
    <string name="paket_pendaftaran">Paket Pendaftaran</string>
    <string name="ketik_paket_pendaftaran">ketik paket pendaftaran</string>
    <string name="ketik_nilai_cashback">ketik nilai cashback</string>
    <string name="ketik_check_cha">ketik check cha</string>
    <string name="biografi">Biografi</string>
</resources>