<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="164dp"
        android:text="@string/login"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/bg_btn_shadow"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/txtLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtLogin"
        app:layout_constraintTop_toBottomOf="@+id/txtLogin" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_btn_shadow"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/etLoginEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etLoginEmail"
        app:layout_constraintTop_toBottomOf="@+id/etLoginEmail"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnSignInLogin"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="180dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="@+id/etLoginPassword"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/etLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />



</androidx.constraintlayout.widget.ConstraintLayout>